--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 								<li><a href="#footer">Social Media</a></li>
 							</ul>
 						</li>
-						<li><a id="LogInbutton" href="https://vrdev.eu.auth0.com/authorize?audience=MovieCastApp&response_type=token&client_id=nufEsETO2W43Bo42Ai7YzNdsp7woWbmP&redirect_uri=https://vr-casting-agency.herokuapp.com/" class="button primary">Log in</a></li>
+						<li><a id="LogInbutton" href="https://DOMAIN/authorize?audience=API_AUDIENCE&response_type=token&client_id=CLIENT_ID&redirect_uri=CALLBACK_URL" class="button primary">Log in</a></li>
 						<li><a id="LogOutbutton" onclick="logOutSession()" class="button primary">Log out</a></li>
 					</ul>
 				</nav>
