--- a/templates/index.html
+++ b/templates/index.html
@@ -14,17 +14,17 @@
 			<header id="header">
 				<nav id="nav">
 					<ul>
-						<li {% if request.endpoint == 'actors-detail' %} class="active" {% endif %} ><a href="{{ url_for('get_actors_detail') }}">Actors</a></li>
-						<li {% if request.endpoint == 'movies' %} class="active" {% endif %}><a href="{{ url_for('get_movies') }}">Movies</a></li>
-						<li><a href="#two">About Us</a></li>
-						<li>
+						<li id="getActors"><a  href="#" onclick="getActors()">Actors</a></li>
+						<li id="getMovies"><a  href="#" onclick="getMovies()">Movies</a></li> 
+						<li id="aboutUsbutton"><a href="#two">About Us</a></li>
+						<li id="contactButton">
 							<a href="#">Contact Us</a>
 							<ul>
-								<li><a href="templates/form.html">Form</a></li>
+								<li><a href="/form">Form</a></li>
 								<li><a href="#footer">Social Media</a></li>
 							</ul>
 						</li>
-						<li><a id="LogInbutton" href="https://DOMAIN/authorize?audience=API_AUDIENCE&response_type=token&client_id=CLIENT_ID&redirect_uri=CALLBACK_URL" class="button primary">Log in</a></li>
+						<li><a id="LogInbutton" href="https://vrdev.eu.auth0.com/authorize?audience=MovieCastApp&response_type=token&client_id=nufEsETO2W43Bo42Ai7YzNdsp7woWbmP&redirect_uri=https://vr-casting-agency.herokuapp.com/" class="button primary">Log in</a></li>
 						<li><a id="LogOutbutton" onclick="logOutSession()" class="button primary">Log out</a></li>
 					</ul>
 				</nav>
@@ -34,20 +34,20 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>Welcome to Casting Agency!</h2>
+							<h2 id="c1">Welcome to Casting Agency!</h2>
 							<p>With over 20 years experience in the field of casting,<br />
 								we take pride in being able to deliver the unusual<br />
 								or source individuals with both specialist skills and looks.</p>
 						</header>
-						<span class="image"><img src="static/images/pic01.jpg" alt="" /></span>
-						<header id="header1">
+						<span class="image"><img id="profileImage" src="static/images/pic01.jpg" alt="Profile Image" /></span>
+						<!-- <header id="header1">
 							<nav id="nav">
 								<ul>
 									<li><a id="addMovie" href="#" class="button m-button" data-target="#actorAdd">Add Movie</a></li>
 									<li><a id="addActor" href="#" class="button m-button" data-target="#movieAdd">Add Actor</a></li>
 								</ul>
 							</nav>
-						</header>
+						</header> -->
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</section>
