--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,8 @@
 					<ul>
 						<li id="getActors"><a  href="#" onclick="getActors()">Actors</a></li>
 						<li id="getMovies"><a  href="#" onclick="getMovies()">Movies</a></li> 
+						<li id="addMovie"><a  href="#" class="button m-button" data-target="#actorAdd">Add Movie</a></li>
+						<li id="addActor"><a  href="#" class="button m-button" data-target="#movieAdd">Add Actor</a></li>
 						<li id="aboutUsbutton"><a href="#two">About Us</a></li>
 						<li id="contactButton">
 							<a href="#">Contact Us</a>
@@ -35,24 +37,14 @@
 					<div class="content">
 						<header>
 							<h2 id="c1">Welcome to Casting Agency!</h2>
-							<p>With over 20 years experience in the field of casting,<br />
+							<p id="c2">With over 20 years experience in the field of casting,<br />
 								we take pride in being able to deliver the unusual<br />
 								or source individuals with both specialist skills and looks.</p>
 						</header>
 						<span class="image"><img id="profileImage" src="static/images/pic01.jpg" alt="Profile Image" /></span>
-						<!-- <header id="header1">
-							<nav id="nav">
-								<ul>
-									<li><a id="addMovie" href="#" class="button m-button" data-target="#actorAdd">Add Movie</a></li>
-									<li><a id="addActor" href="#" class="button m-button" data-target="#movieAdd">Add Actor</a></li>
-								</ul>
-							</nav>
-						</header> -->
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</section>
-
-		
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
@@ -62,7 +54,6 @@
 							<h2>Bespoke Casting</h2>
 							<p>Why choose us?</p>
 						</header>
-						<!-- <p>We are recognised as one of the best UK background casting agencies. Don’t take our word for it, check out our credits.</p> -->
 						<ul>
 							<li>Top national agency</li>
 							<li>Biggest selection of Artistes</li>
@@ -83,9 +74,6 @@
 
 			<!-- Footer -->
 				<footer id="footer">
-					<ul>
-						<li class="active" id="additional" class="button is-primary" onclick="getTokenResponse()"> <a>additional</a></li>
-					</ul>
 					<ul class="icons">
 						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
