--- a/templates/actors.html
+++ b/templates/actors.html
@@ -1,15 +1,15 @@
 {% extends 'index.html' %}
 {% block title %}Casting Agency | Actors{% endblock %}
 {% block content %}
-
 <section id="highlights" class="wrapper style3">
 	<div class="title">The Actors</div>
 	<div class="container">
 		<div class="row aln-center">
 			{% for actor in actors %}
 			<div class="col-4 col-12-medium">
-				
 				<section class="highlight">
+					<button type="submit" data-id="{{ actor.id }}" class="button-delete" title="Remove actor"><i class="fa fa-trash-alt"></i></button>
+					<button type="submit" data-id="{{ actor.id }}" class="button-edit" title="Edit actor"><i class="fa fa-edit"></i></button>
 					<a href="/actors/{{ actor.id }}" class="image featured"><img src="static/images/pic01.jpg" alt="" /></a>
 					<h3><a href="/actors/{{ actor.id }}">{{ actor.name }}</a></h3>
 					<p>Eget mattis at, laoreet vel amet sed velit aliquam diam ante, dolor aliquet sit amet vulputate mattis amet laoreet lorem.</p>
@@ -21,4 +21,4 @@
 	</div>
 </section>
 {% endblock %}
-				
+						
