--- a/templates/form.html
+++ b/templates/form.html
@@ -10,9 +10,9 @@
 	<title>Contact Us</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="static/assets/css/main.css" />
 	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="static/assets/css/noscript.css" /></noscript>
 </head>
 
 <body class="is-preload">
@@ -39,7 +39,7 @@
 					<div class="col-4 col-12-medium">
 						<section id="sidebar">
 							<section>
-								<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="static/images/pic06.jpg" alt="" /></a>
 								<h3>Did not get any response?</h3>
 								<p>Usually we get back between 6 working days. Please allow us 6 days from
 								the day you have sent the form to get back to you. For urgent technical issues dial   <b>+111111111111</b></p>
@@ -110,13 +110,13 @@
 	</div>
 
 	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
-	<script src="assets/js/jquery.dropotron.min.js"></script>
-	<script src="assets/js/jquery.scrollex.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/main.js"></script>
+	<script src="static/assets/js/jquery.min.js"></script>
+	<script src="static/assets/js/jquery.scrolly.min.js"></script>
+	<script src="static/assets/js/jquery.dropotron.min.js"></script>
+	<script src="static/assets/js/jquery.scrollex.min.js"></script>
+	<script src="static/assets/js/browser.min.js"></script>
+	<script src="static/assets/js/breakpoints.min.js"></script>
+	<script src="static/assets/js/main.js"></script>
 
 </body>
 
