--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
 								<li id="addMovie"><a href="#" onclick="openForm('MovieForm')" >Add Movie</a></li>
 							</ul>
 						</li>
-						<li><a id="LogInbutton" href="https://vrdev.eu.auth0.com/authorize?audience=MovieCastApp&response_type=token&client_id=nufEsETO2W43Bo42Ai7YzNdsp7woWbmP&redirect_uri=https://vr-casting-agency.herokuapp.com/" class="button primary">Log in</a></li>
+						<li><a id="LogInbutton" href="https://AUTH0-DOMAIN/authorize?audience=APIAUDIENCE&response_type=token&client_id=CLIENT_ID&redirect_uri=https://vr-casting-agency.herokuapp.com/" class="button primary">Log in</a></li>
 						<li><a id="LogOutbutton" class="button primary">Log out</a></li>
 					</ul>
 				</nav>
